# TheMemeProject

./: .gitignore  CONTRIBUTING  README.md  docker-compose.yml  hello_this_is_juan.sh  rEaDmE.md
.github/scripts/: nice-file-counter.sh
.github/workflows/: absolutely-useful-ci.yml  autodeploy.yml  nice-file-counter.yml
FLUTTER_APP.EXE/the_meme_project/: README.md  pubspec.yaml
FLUTTER_APP.EXE/the_meme_project/android/app/: build.gradle
FLUTTER_APP.EXE/the_meme_project/ios/Runner/: Info.plist
FLUTTER_APP.EXE/the_meme_project/ios/Runner.xcodeproj/: project.pbxproj
FLUTTER_APP.EXE/the_meme_project/lib/: main.dart
FLUTTER_APP.EXE/the_meme_project/linux/: CMakeLists.txt  my_application.cc
FLUTTER_APP.EXE/the_meme_project/macos/Runner.xcodeproj/: project.pbxproj
FLUTTER_APP.EXE/the_meme_project/test/: widget_test.dart
FLUTTER_APP.EXE/the_meme_project/web/: index.html  manifest.json
FLUTTER_APP.EXE/the_meme_project/windows/: CMakeLists.txt
FLUTTER_APP.EXE/the_meme_project/windows/runner/: Runner.rc  main.cpp
TOP_TEXT/: readMe.md
bottom_text/: reAdme.md
docs/: CNAME  ilove.css  index.html
homework_wink/: Dockerfile  Make the comments Amogus' search history  READMe.md  beeb89_bot.py  docker-compose.yml  pyproject.toml  redditpraw.py  requirements.txt
homework_wink/secrets/: secret_function6.py  secret_function9.py
mACHINE-LEARNINGS/: requirements.txt  train.py
mACHINE-LEARNINGS/classes/: MemeDataset.py
mACHINE-LEARNINGS/models/: DankCNN.py
sus-whatsapp-bot-but-hey-its-telegram-instaed-lmao/: READMe.md
(+5 files in other folders)
