[tool.poetry]
name = "telegram-bot-wink"
version = "0.1.0"
description = "Amogus"
authors = ["SUS"]

[tool.poetry.dependencies]
python = "^3.10"
jurigged = "^0.4.1"
praw = "^7.5.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
